# glicol-verb

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  plan.md  spec.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
src/: editor.rs  lib.rs  messages.rs  params.rs
src/dsp/: delay.rs  eq.rs  mod.rs
src/engine/: buffer_bridge.rs  mod.rs  param_injector.rs  wrapper.rs
tools/gen_test_audio/: Cargo.toml
tools/gen_test_audio/src/: main.rs
xtask/: Cargo.toml
